force-app/main/default/objects/Paypal__c/Paypal__c.object-meta.xml
<CustomObject>
    <label>Paypal</label>
    <nameField>
        <label>Paypal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PayPal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>