force-app/main/default/objects/Paypal__c/fields/PaymentId__c.field-meta.xml
<CustomField>
    <fullName>PaymentId__c</fullName>
    <displayFormat>pp-{0000}</displayFormat>
    <label>PaymentId</label>
    <type>AutoNumber</type>
</CustomField>