force-app/main/default/objects/Paypal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>unpaid</fullName>
                <default>true</default>
                <label>unpaid</label>
            </value>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>claimed</fullName>
            </value>
            <value>
                <fullName>Unclaimed</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>